# Flask-Form

./: README.md  pyproject.toml  pyvenv.cfg
Scripts/: activate  activate.bat  activate.fish  activate.nu
src/: __init__.py  config.py  run.py  tailwind.config.js
src/controler/: __init__.py
src/dao/: user_dao.py
src/model/: user.py
src/templates/: error.html  form.html  index.html  sucess.html
src/views/: __init__.py
