[tool.poetry]
name = "form"
version = "0.1.0"
description = ""
authors = ["Leon <leoncdzt@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Flask = "^3.0.3"
SQLAlchemy = "^2.0.31"
pymongo = "^4.8.0"
python-dotenv = "^1.0.1"
flask-sqlalchemy = "^3.1.1"
mysqlclient = "^2.2.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
